Student progress bar fix